--- a/leaflet.html
+++ b/leaflet.html
@@ -27,7 +27,7 @@
     <div class="container">
       <h1>Working with Leaflet</h1>
       <div id="first-map" class="map"></div><br>
-
+      <p>Above is my leaflet map.</p>
     </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
