--- a/minimap.html
+++ b/minimap.html
@@ -103,7 +103,7 @@ html {
 <!-- API ACCESS FOR THE MAP -->
 <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
 <script>
-L.mapbox.accessToken = 'pk.eyJ1IjoibWFwcGxlZ2EiLCJhIjoiY2lqbzk3aGVlMDB0bHRvbTVvNXB1azZxdyJ9.PpTLv2su5er4AqXhF-LK4A';
+L.mapbox.accessToken = 'pk.eyJ1IjoibWF5cmFsZWVtIiwiYSI6ImNsMWdnYnpuejB4bGszcXA4ZTJicHl6MnUifQ.f0aZXh8RtSk5ZkV0VnmkEg';
 var map = L.mapbox.map('map', 'mapbox.streets', {
   container: 'map',
 });
