--- a/index.html
+++ b/index.html
@@ -136,12 +136,12 @@ body, html {
           }
       }, {
           type: 'Feature',
-          "geometry": { "type": "Point", "coordinates": [-5.930120, 54.597285]},
+          "geometry": { "type": "Point", "coordinates": [-73.9639, 40.6712]},
           "properties": {
-              'title': 'Belfast Peace Lines',
-              'marker-color': '#FFFFFF',
-              'marker-symbol': 'city',
-              'marker-size': 'large',
+              'title': 'Brooklyn Museum',
+              'marker-color': '#0096FF',
+              'marker-symbol': 'museum',
+              'marker-size': 'medium',
               'images': [
                 ['https://drive.google.com/uc?id=1pyrWXWSgR-1LxtI9cYtDY_JbOV4Pjm7Z','The Belfast Peace Lines were constructed in 1969 and divided Catholic communities from Protestant ones.'],
                 ['http://molloymediaarchaeology.org/images/peacewall2.jpg','Molloy students visited the peace lines on May 28, 2016.'],
