--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@ body, html {
           }
       }, {
           type: 'Feature',
-          "geometry": { "type": "Point", "coordinates": [-73.9639, 40.6712]},
+          "geometry": { "type": "Point", "coordinates": [-73.9639, 40.7614]},
           "properties": {
               'title': 'Brooklyn Museum',
               'marker-color': '#0096FF',
@@ -150,11 +150,11 @@ body, html {
           }
       }, {
           type: 'Feature',
-          "geometry": { "type": "Point", "coordinates": [-73.6291694641113, 40.6866260456405]},
+          "geometry": { "type": "Point", "coordinates": [-73.9632, 40.7794]},
           "properties": {
-              'title': 'Molloy College',
-              'marker-color': '#a01f2c',
-              'marker-symbol': 'college',
+              'title': 'The Metropolitan Museum of Art',
+              'marker-color': '#E1C699',
+              'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
                 ['https://upload.wikimedia.org/wikipedia/en/6/61/MolloyCollege_Logo.png','This is where I teach Coding for the Humanities!'],
