--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@ body, html {
           }
       }, {
           type: 'Feature',
-          "geometry": { "type": "Point", "coordinates": [-6.2603, 53.349805]},
+          "geometry": { "type": "Point", "coordinates": [-73.9514, 40.7931]},
           "properties": {
-              'title': 'Dublin, Ireland',
-              'marker-color': '#FFFFFF',
-              'marker-symbol': 'city',
-              'marker-size': 'large',
+              'title': 'El Museo del Barrio',
+              'marker-color': '#8B0000',
+              'marker-symbol': 'museum',
+              'marker-size': 'medium',
               'images': [
                 ['http://molloymediaarchaeology.org/images/dublintown.jpg','Students spent Sunday, May 29 in Dublin, Ireland.'],
                 ['http://molloymediaarchaeology.org/images/jervis.jpg','<iframe width="280" height="195" src="https://www.youtube.com/embed/O31ciXE9tns" frameborder="0" allowfullscreen></iframe>','Students documented what they saw and experienced.']
@@ -251,7 +251,7 @@ body, html {
       });
 
       <!-- SET THE MAP VIEW HERE -->
-      map.setView([40.7, -74], 8);
+      map.setView([40.7, -74], 9);
       </script>
       <br><p>This is the first paragraph of my webpage, despite the div above.
       Keep writing in this section. This is the first paragraph of my webpage, despite the div above. Keep writing in this section.</p></br>
