--- a/index.html
+++ b/index.html
@@ -177,9 +177,9 @@ body, html {
           }
       }, {
           type: 'Feature',
-          "geometry": { "type": "Point", "coordinates": [-6.42425, 53.72220]},
+          "geometry": { "type": "Point", "coordinates": [-73.9639, 40.6712]},
           "properties": {
-              'title': 'The Memory Sculpture',
+              'title': 'The Brooklyn Museum',
               'marker-color': '#FFD700',
               'marker-symbol': 'monument',
               'marker-size': 'medium',
