--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body, html {
           "geometry": { "type": "Point", "coordinates": [-73.9776, 40.7614]},
           "properties": {
               'title': 'Museum of Modern Art',
-              'marker-color': '#FFC0CB',
+              'marker-color': '#E6E6FA',
               'marker-symbol': 'museum',
               'marker-size': 'medium',
 
@@ -138,7 +138,7 @@ body, html {
           type: 'Feature',
           "geometry": { "type": "Point", "coordinates": [-73.9639, 40.7614]},
           "properties": {
-              'title': 'Brooklyn Museum',
+              'title': 'The Brooklyn Museum',
               'marker-color': '#0096FF',
               'marker-symbol': 'museum',
               'marker-size': 'medium',
@@ -177,11 +177,11 @@ body, html {
           }
       }, {
           type: 'Feature',
-          "geometry": { "type": "Point", "coordinates": [-73.9639, 40.6712]},
+          "geometry": { "type": "Point", "coordinates": [-73.9624, 40.6695]},
           "properties": {
-              'title': 'The Brooklyn Museum',
-              'marker-color': '#FFD700',
-              'marker-symbol': 'monument',
+              'title': 'The Brooklyn Botanic Garden',
+              'marker-color': '#FFC0CB',
+              'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
                 ['http://molloymediaarchaeology.org/images/adriana_memory2.jpg','The Memory Sculpture is another piece kept within the Walled Gardens.'],
