--- a/index.html
+++ b/index.html
@@ -177,11 +177,11 @@ body, html {
           }
       }, {
           type: 'Feature',
-          "geometry": { "type": "Point", "coordinates": [-73.9624, 40.6695]},
+          "geometry": { "type": "Point", "coordinates": [-73.963607, 40.667814]},
           "properties": {
               'title': 'The Brooklyn Botanic Garden',
               'marker-color': '#FFC0CB',
-              'marker-symbol': 'museum',
+              'marker-symbol': 'garden',
               'marker-size': 'medium',
               'images': [
                 ['http://molloymediaarchaeology.org/images/adriana_memory2.jpg','The Memory Sculpture is another piece kept within the Walled Gardens.'],
