--- a/index.html
+++ b/index.html
@@ -143,9 +143,10 @@ body, html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['https://drive.google.com/uc?id=1pyrWXWSgR-1LxtI9cYtDY_JbOV4Pjm7Z','The Belfast Peace Lines were constructed in 1969 and divided Catholic communities from Protestant ones.'],
-                ['http://molloymediaarchaeology.org/images/peacewall2.jpg','Molloy students visited the peace lines on May 28, 2016.'],
-                ['http://molloymediaarchaeology.org/images/peacewall3.jpg','Students wrote their names and messages on the walls, leaving a mark on the structure. Writing on the walls is a common and important act of memorialization.']
+                ['https://www.google.com/maps/uv?pb=!1s0x89c25b0a449c39c9%3A0xc62355aa46c985fa!3m1!7e115!4shttps%3A%2F%2Flh5.googleusercontent.com%2Fp%2FAF1QipMfYVQrmzkPzEQElF_VF77Lz11hfTTGVphHNx1B%3Dw226-h160-k-no!5sbrooklyn%20museum%20-%20Google%20Search!15sCgIgAQ&imagekey=!1e10!2sAF1QipMfYVQrmzkPzEQElF_VF77Lz11hfTTGVphHNx1B&hl=en&sa=X&ved=2ahUKEwjv_d-njfP2AhXukokEHQqsBhYQoip6BAg1EAM','The Brooklyn Museum stands on land that is part of the unceded, ancestral homeland of the Lenape (Delaware) people..'],
+                ['http://mayralee.molloynewmedia.org/images/bmgroup.jpg','I visited the Brooklyn Museum over Spring Break with friends.'],
+                ['http://mayralee.molloynewmedia.org/images/bmfortune.jpg','http://mayralee.molloynewmedia.org/images/bmangel.jpg''At the time of my visit, there was an interactive exhibit where patrons could add to the cork sculpture. I left my lucky angel and a fortune that I happened to carry with me.']
+                ['http://mayralee.moloynewmedia.org/images/bmparty.jpg','http://mayralee.molloynewmedia.org/images/bmshoe.jpg''My favorite exhibit at the time of my visit was "The Slipstream: Reflection, Resilience, and Resistance in the Art of Our Time."']
               ]
           }
       }, {
