--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@ body, html {
               'marker-size': 'medium',
               'images': [
                // ['https://img.artrabbit.com/organisations/brooklyn-museum-of-art/images/t1f6OdxktFIX/938x546/11547460fe811da.jpg','The Brooklyn Museum stands on land that is part of the unceded, ancestral homeland of the Lenape (Delaware) people..'],
-                ['http://mayralee.molloynewmedia.org/images/bmgroup.jpg','I visited the Brooklyn Museum over Spring Break with friends.'],
-                ['http://mayralee.molloynewmedia.org/images/bmfortune.jpg','http://mayralee.molloynewmedia.org/images/bmangel.jpg''At the time of my visit, there was an interactive exhibit where patrons could add to the cork sculpture. I left my lucky angel and a fortune that I happened to carry with me.']
+                ['https://mayralee.molloynewmedia.org/images/bmgroup.jpg','I visited the Brooklyn Museum over Spring Break with friends.'],
+                ['https://mayralee.molloynewmedia.org/images/bmfortune.jpg','http://mayralee.molloynewmedia.org/images/bmangel.jpg''At the time of my visit, there was an interactive exhibit where patrons could add to the cork sculpture. I left my lucky angel and a fortune that I happened to carry with me.']
               //  ['http://mayralee.molloynewmedia.org/images/bmparty.jpg','http://mayralee.molloynewmedia.org/images/bmshoe.jpg''My favorite exhibit at the time of my visit was "The Slipstream: Reflection, Resilience, and Resistance in the Art of Our Time."']
               ]
           }
