--- a/index.html
+++ b/index.html
@@ -143,7 +143,6 @@ body, html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['https://img.artrabbit.com/organisations/brooklyn-museum-of-art/images/t1f6OdxktFIX/938x546/11547460fe811da.jpg','The Brooklyn Museum stands on land that is part of the unceded, ancestral homeland of the Lenape (Delaware) people.'],
                 ['https://mayralee.molloynewmedia.org/images/bmgroup.jpg','I visited the Brooklyn Museum over Spring Break with friends.'],
                 ['https://mayralee.molloynewmedia.org/images/bmfortune.jpg','At the time of my visit, there was an interactive exhibit where patrons could add to the cork sculpture. I left my lucky angel and a fortune that I happened to carry with me.'],
                 ['https://mayralee.molloynewmedia.org/images/bmparty.jpg','My favorite exhibit at the time of my visit was "The Slipstream: Reflection, Resilience, and Resistance in the Art of Our Time."']
@@ -158,9 +157,9 @@ body, html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['https://upload.wikimedia.org/wikipedia/en/6/61/MolloyCollege_Logo.png','This is where I teach Coding for the Humanities!'],
-                ['https://www.molloy.edu/Images/NMD_Acad_2018.jpg','I love New Media!'],
-                ['https://pbs.twimg.com/media/D1eev5CXQAYm_7x.jpg','Don\'t you?']
+                ['https://mayralee.molloynewmedia.org/images/influencer.jpeg','The Metropolitan Museum of Art is one of the most popular and most visited museums in the world. Home to a range of art displays dating back to 3700 B.C.'],
+                ['https://mayralee.molloynewmedia.org/images/torso.jpeg','Sculptres, paintings, and fashion are all forms of art that are put on display at The Met. The Met is also often known for a gala that they host every year where fashion is taken to the extreme and garments are then displayed in an exhibit for the upcoming year.'],
+                ['https://mayralee.molloynewmedia.org/images/degas.jpeg','Many world-renowned artist host their art at this museum. Above you\'ll see art by Edgar Degas, who rose to fame with his bronze sculptures.']
               ]
           }
       }, {
