--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ body, html {
               'images': [
                 ['https://mayralee.molloynewmedia.org/images/influencer.jpeg','The Metropolitan Museum of Art is one of the most popular and most visited museums in the world. Home to a range of art displays dating back to 3700 B.C.'],
                 ['https://mayralee.molloynewmedia.org/images/torso.jpeg','Sculptures, paintings, and fashion are all forms of art that are put on display at The Met. The Met is also often known for a gala that they host every year where fashion is taken to the extreme and garments are then displayed in an exhibit for the upcoming year.'],
-                ['https://mayralee.molloynewmedia.org/images/degas.jpeg','Many world-renowned artist host their art at this museum. Above you\'ll see art by Edgar Degas, who rose to fame with his bronze sculptures.']
+                ['https://mayralee.molloynewmedia.org/images/degas.jpeg','Many world-renowned artist host their art at this museum. Above you\'ll see art by Edgar Degas, who rose to fame with his bronze sculptures. Due to such fame, patrons are often more dressed up when arriving at the Met. The museum also tends to have a posh air about it that is reinforced by the amount of obvious security around every corner.']
               ]
           }
       }, {
@@ -184,9 +184,9 @@ body, html {
               'marker-symbol': 'garden',
               'marker-size': 'medium',
               'images': [
-                ['http://molloymediaarchaeology.org/images/adriana_memory2.jpg','The Memory Sculpture is another piece kept within the Walled Gardens.'],
-                ['http://molloymediaarchaeology.org/images/grant_pole2.jpg','The sculpture is a remnant of another tree present at the Battle of the Boyne.'],
-                ['http://molloymediaarchaeology.org/images/grant_pole4.jpg','The wooden monument is intended to serve as a reminder to visitors that history never goes away -- it is forever present and forever a part of the people it touches.']
+                ['http://mayralee.molloynewmedia.org/images/bonsai.jpeg','The Brooklyn Botanic Garden is an urban botanic garden that connects people to the world of plants, fostering delight and curiosity while inspiring an appreciation and sense of stewarship of the environment.'],
+                ['http://mayralee.molloynewmedia.org/images/sky.jpeg','The ambience of the garden is extremey different to that of the Brooklyn Museum, despite the two locations being directly adjacent to one another. You\'ll find that the people walking the garden are typically more casually dressed. In addition, the garden is obviously seasonal seeing as the plants would not thrive well in harsh winter conditions.'],
+                ['http://mayralee.molloynewmedia.org/images/sauna.jpeg','The wooden monument is intended to serve as a reminder to visitors that history never goes away -- it is forever present and forever a part of the people it touches.']
               ]
           }
       }];
