--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@ body, html {
               'marker-size': 'medium',
               'images': [
                 ['http://mayralee.molloynewmedia.org/images/bonsai.jpeg','The Brooklyn Botanic Garden is an urban botanic garden that connects people to the world of plants, fostering delight and curiosity while inspiring an appreciation and sense of stewarship of the environment.'],
-                ['http://mayralee.molloynewmedia.org/images/sky.jpeg','The ambience of the garden is extremey different to that of the Brooklyn Museum, despite the two locations being directly adjacent to one another. You\'ll find that the people walking the garden are typically more casually dressed. In addition, the garden is obviously seasonal seeing as the plants would not thrive well in harsh winter conditions.'],
+                ['http://mayralee.molloynewmedia.org/images/sky.jpeg','The ambience of the garden is extremely different to that of the Brooklyn Museum, despite the two locations being directly adjacent to one another. You\'ll find that the people walking the garden are typically more casually dressed. In addition, the garden is obviously seasonal seeing as the plants would not thrive well in harsh winter conditions.'],
                 ['http://mayralee.molloynewmedia.org/images/sauna.jpeg','The wooden monument is intended to serve as a reminder to visitors that history never goes away -- it is forever present and forever a part of the people it touches.']
               ]
           }
