--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en", "sp">
 <head>
 <meta charset="utf-8">
 <title>My JavaScripting English Major Project</title>
