--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ body, html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['https://mayralee.molloynewmedia.org/images/bmgroup.jpg','I visited the Brooklyn Museum over Spring Break with friends.'],
+                ['https://mayralee.molloynewmedia.org/images/bmgroup.jpg','The Brooklyn Museum; where great art and corageous conversations are catalysts froa. more connected, civic, and empathetic world.'],
                 ['https://mayralee.molloynewmedia.org/images/bmfortune.jpg','At the time of my visit, there was an interactive exhibit where patrons could add to the cork sculpture. I left my lucky angel and a fortune that I happened to carry with me.'],
                 ['https://mayralee.molloynewmedia.org/images/bmparty.jpg','My favorite exhibit at the time of my visit was "The Slipstream: Reflection, Resilience, and Resistance in the Art of Our Time."']
               ]
