--- a/minimap.html
+++ b/minimap.html
@@ -121,8 +121,9 @@ html {
 
               // Store the image url and caption in an array.
               'images': [
-                ['http://molloymediaarchaeology.org/images/droneabove.jpg','You are about to experience an interactive map and <a href="http://molloyenglish.org/omeka-2.4">archive</a> of the Boyne Valley in Northeastern Ireland. The map and <a href="http://molloyenglish.org/omeka-2.4">archive</a> were created in the spring of 2016 by the students of SAP 261 [Media Archaeology] in consultation with <a href="http://mapplega.com">Matt Applegate</a>, <a href="http://www.jamesncohen.com/">Jamie Cohen</a>, <a href="http://margaretdelima.com/home.html">Maraget DeLima</a>, and Destinee Day.'],          ['http://molloymediaarchaeology.org/images/dkitwide.jpg','Students completed this map and archive along with a certificate in <a href="https://www.dkit.ie/news/dkit-unveils-new-programme-certificate-cultural-landscapes-newgrange-boyne-valley">Cultural Landscapes</a> at <a href="https://www.dkit.ie/">DkIT</a>, Dundalk Institute of Technology, led by professor <a href="https://www.dkit.ie/users/dr-conor-brady">Conor Brady</a>.'],
-                ['http://molloymediaarchaeology.org/images/molloylogo.jpg', '<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Molloy Media Archaeology Map & Archive</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://molloymediaarchaeology.org/archive" property="cc:attributionName" rel="cc:attributionURL">SAP 261</a>, led by <a href="http://mapplega.com">Matt Applegate</a>, <a href="http://www.jamesncohen.com/">Jamie Cohen</a>, & <a href="http://margaretdelima.com/home.html">Margaret DeLima</a>, is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. <br><br>Our map is powered by <a href="http://mapbox.com">Mapbox</a> and our archive is powered by <a href="http://omeka.org">Omeka!</a>']
+                ['http://mayralee.molloynewmedia.org/images/campbellsoup.jpeg','The <a href="https://www.moma.org/about/">Museum of Modern Art</a>, MoMA, shares the most thought-provoking modern and contemporary art to foster conversation regarding diverse cultural, artistic, social and political positions.'],
+                ['http://mayralee.molloynewmedia.org/images/starrynight.jpeg','Students completed this map and archive along with a certificate in <a href="https://www.dkit.ie/news/dkit-unveils-new-programme-certificate-cultural-landscapes-newgrange-boyne-valley">Cultural Landscapes</a> at <a href="https://www.dkit.ie/">DkIT</a>, Dundalk Institute of Technology, led by professor <a href="https://www.dkit.ie/users/dr-conor-brady">Conor Brady</a>.'],
+                ['http://mayralee.molloynewmedia.org/images/thereality.jpeg','<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Molloy Media Archaeology Map & Archive</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://molloymediaarchaeology.org/archive" property="cc:attributionName" rel="cc:attributionURL">SAP 261</a>, led by <a href="http://mapplega.com">Matt Applegate</a>, <a href="http://www.jamesncohen.com/">Jamie Cohen</a>, & <a href="http://margaretdelima.com/home.html">Margaret DeLima</a>, is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc/4.0/">Creative Commons Attribution-NonCommercial 4.0 International License</a>. <br><br>Our map is powered by <a href="http://mapbox.com">Mapbox</a> and our archive is powered by <a href="http://omeka.org">Omeka!</a>']
               ]
           }
       }, {
@@ -134,7 +135,7 @@ html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['https://mayralee.molloynewmedia.org/images/bmgroup.jpg','I visited the Brooklyn Museum over Spring Break with friends.'],
+                ['https://mayralee.molloynewmedia.org/images/bmgroup.jpg','<a href="https://www.brooklynmuseum.org/about">The Brooklyn Museum</a>; where great art and corageous conversations are catalysts froa. more connected, civic, and empathetic world.'],
                 ['https://mayralee.molloynewmedia.org/images/bmfortune.jpg','At the time of my visit, there was an interactive exhibit where patrons could add to the cork sculpture. I left my lucky angel and a fortune that I happened to carry with me.'],
                 ['https://mayralee.molloynewmedia.org/images/bmparty.jpg','My favorite exhibit at the time of my visit was "The Slipstream: Reflection, Resilience, and Resistance in the Art of Our Time."']
               ]
@@ -148,7 +149,7 @@ html {
               'marker-symbol': 'museum',
               'marker-size': 'medium',
               'images': [
-                ['https://mayralee.molloynewmedia.org/images/influencer.jpeg','The Metropolitan Museum of Art is one of the most popular and most visited museums in the world. Home to a range of art displays dating back to 3700 B.C.'],
+                ['https://mayralee.molloynewmedia.org/images/influencer.jpeg','The <a href="https://www.metmuseum.org/about-the-met">Metropolitan Museum of Art</a> is one of the most popular and most visited museums in the world. Home to a range of art displays dating back to 3700 B.C.'],
                 ['https://mayralee.molloynewmedia.org/images/torso.jpeg','Sculptures, paintings, and fashion are all forms of art that are put on display at The Met. The Met is also often known for a gala that they host every year where fashion is taken to the extreme and garments are then displayed in an exhibit for the upcoming year.'],
                 ['https://mayralee.molloynewmedia.org/images/degas.jpeg','Many world-renowned artist host their art at this museum. Above you\'ll see art by Edgar Degas, who rose to fame with his bronze sculptures. Due to such fame, patrons are often more dressed up when arriving at the Met. The museum also tends to have a posh air about it that is reinforced by the amount of obvious security around every corner.']
               ]
@@ -175,7 +176,7 @@ html {
               'marker-symbol': 'garden',
               'marker-size': 'medium',
               'images': [
-                ['http://mayralee.molloynewmedia.org/images/bonsai.jpeg','The Brooklyn Botanic Garden is an urban botanic garden that connects people to the world of plants, fostering delight and curiosity while inspiring an appreciation and sense of stewarship of the environment.'],
+                ['http://mayralee.molloynewmedia.org/images/bonsai.jpeg','The <a href="https://www.bbg.org/about/mission">Brooklyn Botanic Garden</a> is an urban botanic garden that connects people to the world of plants, fostering delight and curiosity while inspiring an appreciation and sense of stewarship of the environment.'],
                 ['http://mayralee.molloynewmedia.org/images/sky.jpeg','The ambience of the garden is extremely different to that of the Brooklyn Museum, despite the two locations being directly adjacent to one another. You\'ll find that the people walking the garden are typically more casually dressed. In addition, the garden is obviously seasonal seeing as the plants would not thrive well in harsh winter conditions.'],
                 ['http://mayralee.molloynewmedia.org/images/sauna.jpeg','The Brooklyn Botanic Garden is an excellent spot to visit in early spring when their infamous cherry blossom trees are in bloom.']
               ]
